Add CPM, bidder params, flag header in GreenbidsAnalyticsReporter